# u2020dx

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css  tailwind.css
src/: main.rs  models.rs
